--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,8 +6,12 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+# Flyway (runs on startup; schema versioning)
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+
+# JPA/Hibernate: validate only (schema managed by Flyway)
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
